# trace2skill_distiller

./: .gitignore  README.md  exploration-notes.md  pyproject.toml  trace2skill-distiller-design.md
src/trace2skill_distiller/: config.py  db.py  llm.py  models.py
src/trace2skill_distiller/analysis/: __init__.py  analysis_facade.py  types.py
src/trace2skill_distiller/analysis/clustering/: __init__.py  base.py  semantic.py
src/trace2skill_distiller/analysis/distillation/: __init__.py  base.py  llm_distill.py
src/trace2skill_distiller/cli/: main.py
src/trace2skill_distiller/core/: __init__.py  config.py  console.py  types.py  utils.py
src/trace2skill_distiller/engine/: __init__.py  cluster.py  distill.py  merge.py  report.py
src/trace2skill_distiller/llm/: __init__.py  base.py  client.py  transport.py  types.py
src/trace2skill_distiller/llm/providers/: __init__.py  openai_compatible.py
src/trace2skill_distiller/mining/: __init__.py  mining_facade.py  types.py
src/trace2skill_distiller/mining/preprocess/: __init__.py  compress.py  extract.py  pipeline.py
src/trace2skill_distiller/mining/sources/: __init__.py  base.py  chrys.py  opencode.py
src/trace2skill_distiller/orchestrator/: __init__.py  pipeline.py
src/trace2skill_distiller/output/: __init__.py  output_facade.py  state.py  types.py
src/trace2skill_distiller/output/formatters/: __init__.py  (+3 more)
src/trace2skill_distiller/pipeline/: __init__.py  extract.py  preprocess.py
tests/: test_cli.py  test_client.py  test_config.py  test_opencode.py  test_provider.py  test_transport.py  test_utils.py
(+3 files in other folders)
